deployment.yaml
# Service - next-service
apiVersion: v1
kind: Service
metadata:
  labels:
    run: next-${ENVIRONMENT}
  name: next-service-${ENVIRONMENT}
  namespace: ${CICD_GIT_REPO_NAME}-${ENVIRONMENT}
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: next-${ENVIRONMENT}
  sessionAffinity: None
  type: ClusterIP
---
# Ingress - ingress-${ENVIRONMENT}
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    cert-manager.io/issuer: "letsencrypt-${ENVIRONMENT}"
  generation: 2
  name: ingress-${ENVIRONMENT}
  namespace: ${CICD_GIT_REPO_NAME}-${ENVIRONMENT}
spec:
  rules:
  - host: ${CICD_GIT_REPO_NAME}-${ENVIRONMENT}.binpar.cloud
    http:
      paths:
      - backend:
          serviceName: next-service-${ENVIRONMENT}
          servicePort: 80
        path: /
  tls:
  - hosts:
    - ${CICD_GIT_REPO_NAME}-${ENVIRONMENT}.binpar.cloud
    secretName: ${CICD_GIT_REPO_NAME}-cert-${ENVIRONMENT}
---
# Deploy - next-deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: next-${ENVIRONMENT}
  name: next-deploy-${ENVIRONMENT}
  namespace: ${CICD_GIT_REPO_NAME}-${ENVIRONMENT}
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: next-${ENVIRONMENT}
  template:
    metadata:
      labels:
        run: next-${ENVIRONMENT}
    spec:
      containers:
      - image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
        name: next-${ENVIRONMENT}
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 80
            scheme: HTTP
          initialDelaySeconds: 120
          failureThreshold: 2
          timeoutSeconds: 5
          periodSeconds: 60
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "1024Mi"
            cpu: "950m"
